月次コスト登録APIを追加 (#15)
* 月次コスト登録APIのレスポンスに型名が付くよう仕様を修正

* 月次コスト登録で必要なDB操作を追加

* 月次コスト登録APIを実装
